adding tagging functionality

--- a/dynamic/pages/grades.html
+++ b/dynamic/pages/grades.html
@@ -73,309 +73,7 @@
 					<th class="grades__th">18</th>
 				</tr>
 				</thead>
-				<tbody class="grades__tbody">
-				<tr class="grades__tr">
-					<td class="grades__td">Иванов Иван</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				<tr class="grades__tr">
-					<td class="grades__td">Петров Петр</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				<tr class="grades__tr">
-					<td class="grades__td"> Сидоров Семён</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				<tr class="grades__tr">
-					<td class="grades__td">Кузнецов Дмитрий</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				<tr class="grades__tr">
-					<td class="grades__td">Федорова Ольга</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				<tr class="grades__tr">
-					<td class="grades__td">Михайлов Игорь</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				<tr class="grades__tr">
-					<td class="grades__td">Новиков Артем</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__td">
-						<input class="grades__input" type="number" maxlength="2" min="0">
-					</td>
-					<td class="grades__total-grade">0</td>
-				</tr>
-				</tbody>
+				<tbody class="grades__tbody"></tbody>
 			</table>
 		</div>
 	</section>
@@ -383,6 +81,6 @@
 <footer class="footer" role="contentinfo">
 	<p class="footer__text">&copy; 2023 Электронный журнал</p>
 </footer>
-<script src="../scripts/grades.js"></script>
+<script src="../scripts/jsonHandler.js"></script>
 </body>
 </html>
