--- a/dynamic/pages/profile.html
+++ b/dynamic/pages/profile.html
@@ -52,9 +52,9 @@
 			<div class="personal-info__form-group">
 				<label class="personal-info__form-label">Пол</label>
 				<div class="personal-info__form-gender">
-					<input class="personal-info__form-radio" type="radio">
+					<input class="personal-info__form-radio" type="radio" name="gender">
 					<label class="personal-info__form-gender-label">Мужской</label>
-					<input class="personal-info__form-radio" type="radio">
+					<input class="personal-info__form-radio" type="radio" name="gender">
 					<label class="personal-info__form-gender-label">Женский</label>
 				</div>
 			</div>
